--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,22 +13,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
+
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
-    
+        python-version: ${{ matrix.python-version }}
+
     - name: Cache Python dependencies
       uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('requirements/*.txt') }}
+        key: ${{ runner.os }}-pip-${{ hashFiles('requirements/*.txt') }}-python-${{ matrix.python-version }}
         restore-keys: |
-          ${{ runner.os }}-pip-
-    
+          ${{ runner.os }}-pip-python-${{ matrix.python-version }}
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -38,10 +42,10 @@ jobs:
     - name: Lint with flake8
       run: |
         # Stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 ./objwatch ./examples --count --select=E9,F63,F7,F82 --show-source --statistics
         # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 ./objwatch ./examples --count --exit-zero --max-complexity=16 --max-line-length=127 --statistics
 
     - name: Test with unittest
       run: |
-        python3 -m unittest discover -s tests
+        python -m unittest discover -s tests
