--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,4 +8,8 @@ build:
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
-   configuration: docs/conf.py
+   configuration: docs/source/conf.py
+
+python:
+   install:
+   - requirements: requirements/requirements-doc.txt
