--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -36,6 +36,7 @@ jobs:
           ${{ runner.os }}-pip-python-${{ matrix.python-version }}
 
     - name: Install dependencies
+      continue-on-error: true
       run: |
         python -m pip install --upgrade pip
         pip install flake8
