--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -15,15 +15,17 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        check-latest: true
+        allow-prereleases: true
 
     - name: Cache Python dependencies
       uses: actions/cache@v3
@@ -34,6 +36,7 @@ jobs:
           ${{ runner.os }}-pip-python-${{ matrix.python-version }}
 
     - name: Install dependencies
+      continue-on-error: true
       run: |
         python -m pip install --upgrade pip
         pip install flake8
