--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -39,7 +39,7 @@ jobs:
       continue-on-error: true
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
+        pip install flake8 mypy
         if [ -f requirements/requirements-test.txt ]; then pip install -r requirements/requirements-test.txt; fi
 
     - name: Lint with flake8
@@ -48,6 +48,11 @@ jobs:
         flake8 ./objwatch ./examples --count --select=E9,F63,F7,F82 --show-source --statistics
         # Exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 ./objwatch ./examples --count --exit-zero --max-complexity=16 --max-line-length=127 --statistics
+
+    - name: Type check with mypy
+      run: |
+        # Run mypy type checker
+        mypy ./objwatch --ignore-missing-imports
 
     - name: Test with pytest
       run: |
