--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
   { name = "aeeeeeep", email = "aeeeeeep@proton.me" }
 ]
 readme = "README.md"
-requires-python = ">=3.8,<3.15"
+requires-python = ">=3.8,<3.16"
 dependencies = [
   "psutil"
 ]
@@ -22,7 +22,8 @@ classifiers = [
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "Programming Language :: Python :: 3.14"
+  "Programming Language :: Python :: 3.14",
+  "Programming Language :: Python :: 3.15"
 ]
 
 [project.urls]
