--- a/tools/vscode_extension/package.json
+++ b/tools/vscode_extension/package.json
@@ -2,9 +2,9 @@
     "name": "objwatch-log-viewer",
     "displayName": "ObjWatch Log Viewer",
     "description": "Enhanced viewer for ObjWatch debugging logs with syntax highlighting and folding support",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "engines": {
-        "vscode": "^1.80.0"
+        "vscode": "^1.87.0"
     },
     "categories": [
         "Programming Languages",
@@ -47,6 +47,11 @@
                     "default": true,
                     "description": "Enable code folding for ObjWatch logs"
                 },
+                "objwatch-log-viewer.highlightEventTypes": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Highlight different event types with different colors"
+                },
                 "objwatch-log-viewer.enableIndentRainbow": {
                     "type": "boolean",
                     "default": true,
@@ -75,6 +80,13 @@
                     ],
                     "default": "classic",
                     "description": "Style of indentation indicators"
+                },
+                "objwatch-log-viewer.stickyScrollMaxLineCount": {
+                    "type": "number",
+                    "default": 32,
+                    "minimum": 1,
+                    "maximum": 128,
+                    "description": "Maximum number of lines to show in sticky scroll for deep nested structures"
                 }
             }
         }
@@ -93,7 +105,7 @@
     },
     "devDependencies": {
         "@types/node": "^20.18.1",
-        "@types/vscode": "^1.80.0",
+        "@types/vscode": "^1.87.0",
         "@vscode/vsce": "^3.7.0",
         "typescript": "^5.3.0",
         "eslint": "^8.56.0"
